--- a/bower.json
+++ b/bower.json
@@ -29,14 +29,13 @@
     "*.yml"
   ],
   "dependencies": {
-    "angular": "~1.3.x",
-    "bootstrap": "~3.3.2",
-    "jquery": "~2.1.3"
+    "angular": "~1.4.x",
+    "jquery": "~2.1.*"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.x"
+    "angular-mocks": "~1.4.x"
   },
   "resolutions": {
-    "angular": "~1.3.x"
+    "angular": "~1.4.x"
   }
 }
